# calibration_gaezebo

./: README.md  tiaoshi.rviz
fusion/: CMakeLists.txt  myPointType.h  pcl_fusion(复件).cpp
hello_vscode/: CMakeLists.txt  package.xml
hello_vscode/scripts/: hello_vscode_p.py
hello_vscode/src/: hello_vscode_c.cpp
husky/husky_description/urdf/: husky.urdf.xacro
husky/husky_description/urdf/accessories/: HDL-32E.urdf.xacro  ReadMe.txt  VLP-16.urdf(复件).xacro  VLP-16.urdf.xacro  hokuyo.urdf.xacro  intel_realsense.urdf.xacro  kinect_camera.urdf.xacro  sick_lms1xx_mount.urdf.xacro  ur5.urdf.xacro
husky/husky_gazebo/launch/: husky_empty_world.launch  husky_playpen.launch  husky_user_world(复件).launch  husky_user_world.launch  playpen.launch
husky/husky_gazebo/worlds/: calibration_dyn.world  calibration_dyn1.world  calibration_dyn2.world  dyn.world  dyn2.world  dyn3.world  dyn4.world  museum.world  outdoor.world
husky/husky_gazebo/worlds/model/: model.sdf
husky/husky_navigation/launch/: gmapping.launch
tf_publish/: CMakeLists.txt  pcl_tf.cpp
velo2cam_calibration/include/: velo2cam_utils.h
velo2cam_calibration/src/: mono_qr_pattern.cpp
velo2cam_gazebo/gazebo_models/blackflys/: blackflys.urdf.xacro  blackflys_spawn.urdf.xacro
velo2cam_gazebo/velo2cam_gazebo/launch/journal/single_pose/mono_hdl64/: mono_hdl64_p1_real.launch
velo2cam_gazebo/velo2cam_gazebo/launch/journal/single_pose/stereo_hdl32/: stereo_hdl32_p1_real.launch
